# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL

*portage-1.8.9_pre14 (23 Feb 2002)

  23 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: If you have a
  file that's hosted directly on our master ibiblio mirror, you can specify
  it in SRC_URI as "http://mirror/myfile.tar.bz2".  "http://mirror" will be
  expanded to the first mirror defined in GENTOO_MIRRORS, or our master ibiblio
  mirror if no mirrors are defined.  Groovy.  This closes bug #627.
  
  23 Feb 2002; Daniel Robbins <drobbins@gentoo.org> make.globals, emerge,
  portage.py: wget is no longer hardcoded; FETCHCOMMAND is enabled again, but
  uses ${FILE} and ${URI} instead of ${x} and ${y} now.  Added download
  resuming, which requires the definition of RESUMECOMMAND (added to
  make.globals).  Updated spawn() so that when it's called as spawn(foo,free=1)
  as an argument, sandboxing is turned off.  Replaced all calls to
  os.system(foo) with spawn(foo,free=1), since os.system() messes with signal
  handling.  Added a default SIGINT signal handler to portage.py so that ^C
  interrupts are handled correctly (portage will immediately exit with a return
  code of 1).  This has been tested and works for ebuild and emerge.  These
  additions should also close bug #407 and #760.
 
  23 Feb 2002; Daniel Robbins <drobbins@gentoo.org> emerge: spython -> python
  fix; resolution of cvs merge conflict.  Removed edepend assignment bug
  reintroduced in Geert's commit; added comment explaining why the new code is
  needed so it doesn't get removed again ;)

  22 Feb 2002; Geert Bevin <gbevin@gentoo.org> emerge: removed spurious cvs
  conflict lines fixed bug in the cleanup code where different slots weren't
  handled too well

*portage-1.8.9_pre13 (22 Feb 2002)

  22 Feb 2002; Daniel Robbins <drobbins@gentoo.org> various: fix /bin/sh
  symlink merge problems and massively simplified movefile() code.  Added back